webshare-target: Use GURL for WebShareTargetPickerCallback

Changes WebShareTargetPickerCallback to use a GURL.

Bug: 717323
Change-Id: I85bf7c981b9cc37d13284009f64456c6c98a69e0